--- a/public/css/scrolly.css
+++ b/public/css/scrolly.css
@@ -151,7 +151,7 @@
   font-size: 1.9rem;
 }
 [data-bs-theme="scrolly"] .btn-primary {
-  background-color: var(--bs-indigo);
+  background-color: var(--bs-primary);
   border-radius: 30px;
   text-decoration: none;
   --bs-btn-bg: var(--bs-primary);
@@ -165,4 +165,8 @@
 
 [data-bs-theme="scrolly"].btn-primary:hover {
   background-color: var(--bs-purple); 
+}
+
+[data-bs-theme="scrolly"] .quest-page {
+  background: #f5f5f5;
 }
